src/styles/global.css
@charset "UTF-8";

/*************** THEME ***************/

:root {
	--background-primary: #ffffff;
	/* --background-secondary: #c9c9c9; */
	--background-secondary: #F8F8F8;
	--background-tertiary:#F2F2F2;
	--font-primary:#181818;
	--font-secondary: #6b6b6b;
	--color-one: #6814ce;
	--box-shadow: #eeeeee;

	--headings-font: 'Libre Baskerville', serif;
	--paragraph-font: 'Source Sans Pro', sans-serif;
}

:root.dark {
	--background-primary: #1c1c1c;
	--background-secondary:#000000;
	--background-tertiary: #000925;
	--font-primary: #e0e8ff;
	--font-secondary: #C5D4FF;
	--color-one: #be0085;
	--box-shadow: #000000;
}

/*************** BASIC LAYOUT + THEMING ***************/

body {
	background-color: var(--background-secondary);
	font-family: var(--paragraph-font);
	color: var(--font-primary);
}

.content {
	/* background-color: red; */
	/* padding-left: 0.5rem !important; */
	/* padding-right: 0.5rem !important; */
	margin: 2rem 0 !important;
}

.sidebar {
	/* background-color: blue; */
	padding-left: 1rem !important;
	padding-right: 1rem !important;
	margin: 2rem 0 !important;
}

@media only screen and (max-width: 576px) {
	.content {
		/* background-color: red; */
		padding-left: 3.5rem !important;
		padding-right: 3.5rem !important;
	}
	
	.sidebar {
		/* background-color: blue; */
		padding-left: 3.5rem !important;
		padding-right: 3.5rem !important;
	}
}

/*************** BASIC FONTS ***************/

h1 {
	color: red;
	font-family: var(--headings-font);
	font-size: 2rem;
	font-style: bold;
}

h2 {
	color: orange;
	font-family: var(--headings-font);
	font-size: 1.25rem;
}

h3 {
	color: purple;
	font-family: var(--headings-font);
	font-size: 1.1rem;
}

h4 {
	color: green;
}

h5 {
	color: blue;
}

h6 {
	color: purple;
}

a {
	text-decoration: none;
	color: inherit;
}

/*************** TOP ***************/

/* Navbar */

nav {
	background-color: var(--background-primary);
	z-index: 100;
	font-family: var(--paragraph-font);
	height: 5rem;
}

nav .container {
	background-color: gray;
}

nav a:hover {
	color: var(--color-one) !important;
}

.navbar-brand {
	/* padding-left: 2rem; */
	/* text-transform: uppercase; */
	font-size: 1.25rem;
	cursor: pointer;
	color: var(--font-primary);
	font-family: var(--headings-font);
	font-weight: 700;
}

.nav-link {
	font-size: 0.95rem;
	cursor: pointer;
	color: var(--font-primary);
	font-family: var(--paragraph-font);
	font-weight: 400;
}

.navbar-toggler {
	color: var(--font-primary);
}

.navbar-toggler-icon-custom:hover, .theme-icon:hover {
	color: var(--color-one) !important;
}

.navbar-toggler:focus, .theme-toggler:focus, .theme-toggler::after {
	outline: 0 !important;
	border: none !important;
	box-shadow: 0 0 0 0 !important;
}

@media screen and (max-width: 768px) {

	.navbar-collapse {
		position: absolute;
		top: 60px;
		left: -100%;
		width: 25%;
		transition: all 0.1s ease;
		display: block;
		height: 100vh;
		background-color: var(--background-primary);
		padding: 1.25rem;
	}

	.navbar-brand {
		position: absolute;
		transform: translateX(-50%);
		left: 50%;
		/* padding-left: 0; */
	}
	
	.navbar-collapse.collapsing {
		height: 100vh;
		left: -100%;
		/* margin-left: 1px; */
		transition: all 0.2s ease;
	}
	
	.navbar-collapse.show {
		margin-left: 100%;
		transition: all 0.2s ease;
	}
	
}

/* Header */

.header-image {
	background-size: cover;
	width: 100%;
	height: 20rem;
}

/*************** MIDDLE ***************/

/* Postlisting */

.postlisting-content {
	background-color: var(--background-primary);
	box-shadow: 5px 5px 5px var(--box-shadow);
	margin: 1rem;
}

.postlisting-text {
	padding: 1rem;
}

.postlisting-excerpt {
	font-style: italic;
}

.postlisting-author {
	text-transform: uppercase;
	color: var(--font-secondary);
	font-size: 1.1rem;
	padding: 0.25rem 0;
}

.postlisting-bottom-container {
	display: flex;
	justify-content: space-between;
	padding-top: 0.5rem;
	font-size: 0.9rem;
}

.postlisting-bottom-container .hide-element {
	display: none !important;
} /* TODO: Convert hide element to a general class */

/* Isotope Sort Button */

.custom-button {
	border-radius: 50px;
	font-size: 0.85rem;
	display: inline-block;
	box-shadow: 15px 15px 10px var(--box-shadow);
	color: var(--font-primary) !important;
	background-color: var(--background-primary);
	border: none;
	border-radius: 15px;
	margin: 0;
	padding: 0.25rem 0.75rem;
}

.custom-button:hover {
	color: var(--color-one) !important;
}

.custom-button-clicked {
	color: var(--background-primary) !important;
	background-color: var(--color-one);
}

.custom-button-clicked:hover {
	color: var(--background-primary) !important;
	/* box-shadow: 2.5px 2.5px 7.5px var(--background-secondary) !important; */
}

.custom-button-group {
	display: flex;
	flex: 1;
}

.view-button-group {
    justify-content: flex-start;
}

.view-button {
	margin-right: 1rem;
}

.sort-button-group {
    justify-content: flex-end;
}

.sort-button {
	margin-left: 1rem;
}

.sort-button-icon-hide {
	display: none !important;
}

/* Reviews */

.review-card {
	box-shadow: 5px 5px 5px var(--box-shadow);
	background-color: var(--background-primary);
	padding: 4rem;
	line-break: 2.5rem;
	margin: 0 0.3rem;
	/* margin-bottom: 2rem; */
	/* background-color: yellow; */
}

@media only screen and (max-width: 1200px) {
	.review-card {
		padding: 3rem;
	}
}


@media only screen and (max-width: 992px) {
	.review-card {
		padding: 2rem;
	}
}

.review-author {
	text-transform: uppercase;
	color: var(--font-secondary);
	font-size: 1.1rem;
	/* padding-bottom: 0.5rem; */
	margin-bottom: 0.5rem;
}

.review-icon {
	font-size: 0.75rem !important;
}

.review-img-container {
	background-color: var(--background-secondary) !important;
	align-items: center;
}

.review-img {
	max-width:100% !important;
	height: auto !important;
	box-shadow: 5px 5px 5px var(--box-shadow);
}

.review-blurb {
	white-space: pre-line
}

.review-content h2, .review-content h3 {
	padding: 0.5rem 0;
}

.review-card blockquote {
	font-size: 1rem;
	font-family: var(--headings-font);
	font-style: italic;
	padding: 1rem 1.5rem;
	border-left: 0.25rem solid var(--font-secondary) ;
	position: relative;
}

.review-card blockquote p {
	margin-bottom: 0 !important;
}

/*************** SIDE ***************/

/* Card */

.card {
	background-color: var(--background-primary);
	border: none !important;
	padding: 1rem;
	/* box-shadow: 15px 15px 15px var(--box-shadow); */
	margin-bottom: 2rem !important;

}

.card-body {
	padding: 0 !important;
}

.card-container {
	padding: 1.25rem !important;
}

/* Suggestions */

.suggested-read-container {
	padding: 0.5rem 0 0.5rem 0 !important;
}

.suggested-read-title {
	font-family: var(--headings-font);
	font-size: 0.85rem;
	padding-top: 1rem !important;
}

.suggested-read-author {
	font-size: 0.9rem;
	text-transform: uppercase;
	color: var(--font-secondary);
}

/* Searchbar */

.searchbar-card-body {
	background-color: var(--background-secondary) !important ;
}

.search-container {
	border: 2.5px solid var(--font-primary) !important;
	border-radius: 20px;
	background-color: var(--background-primary);
}

.search-icon {
	border: 0 transparent;
	background: transparent;
	padding-right: 0;
	padding-left: 0.5rem;
	color: var(--font-primary);
}

.search-bar {
	border: none;
	background: transparent;
	caret-color: var(--font-primary);
	color: var(--font-primary);
	padding-left: 0;
	padding-right: 0;
	overflow: hidden;
}

.search-bar:focus {
	border: none;
	background: transparent;
	outline: none;
	box-shadow: none;
	caret-color: var(--font-primary);
	color: var(--font-primary);
}

.search-result-container {
	padding: 1.25rem 1.25rem 0 1.25rem !important;
	/* border-bottom: 1px solid var(--font-secondary); */
}

.search-result-title {
	font-family: var(--headings-font);
	font-size: 0.95rem;
}

.search-result-author {
	font-size: 0.9rem;
	text-transform: uppercase;
	color: var(--font-secondary);
	/* padding: 0.25rem 0; */
}

/* Tags */

.tags-list {
	padding-left: 0 !important;
	margin: 0 !important;
	padding-top: 0 !important;
	width: auto;
	display: inline-block;
}

.tags-list p {
	color: var(--font-primary) !important
}

.tag {
	font-size: 0.85rem;
	text-transform: uppercase;
	display: inline-block !important;
	margin-top: 0rem !important;
	padding: 0 !important;
}

.tag p {
	color: var(--font-primary) !important;
}

.tag p:hover {
	color: var(--color-one) !important;
}

/* Scrollbar */

::-webkit-scrollbar {
	width: 5px;
}

::-webkit-scrollbar-track {
	background-color: var(--background-primary);
}

::-webkit-scrollbar-thumb {
	background-color: var(--color-one);
	border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
	background-color: var(--color-one);
}

/* TODO: Remove layout-container media queries when done */
/* TODO: Decide whether to keep dark mode */

